--- a/config/locales/ru/ru.yml
+++ b/config/locales/ru/ru.yml
@@ -138,6 +138,7 @@ ru:
   orders_not_yet: Пока у вас нет истории заказов
   our_production: Наша продукция
   page_not_found: Страница не найдена
+  payment: Оплата
   payment_fail: Ошибка оплаты
   payment_success: Успешная оплата
   phone: Телефон
