--- a/config/locales/ru/devise.ru.yml
+++ b/config/locales/ru/devise.ru.yml
@@ -30,6 +30,8 @@ ru:
       inactive: "Ваша учётная запись ещё не активирована."
       admin_user:
         not_found_in_database: Email пользователя или пароль не верны
+      user:
+        not_found_in_database: Email или пароль не верны
     sessions:
       signed_in: "Приветствуем!"
       signed_out: "До свидания!"
