settings for i18n js

--- a/config/locales/ru/ru.yml
+++ b/config/locales/ru/ru.yml
@@ -84,6 +84,7 @@ ru:
   authentication_help_info: 'Вход/Регистрация или покупка без регистрации'
   blank: Пусто
   brands: Бренды
+  call_me: Позвоните мне
   cart: Корзина
   cart_total_amount: Сумма заказа
   catalog: Каталог
