feature Add button for send request for call user by phone

--- a/config/locales/ru/flash.ru.yml
+++ b/config/locales/ru/flash.ru.yml
@@ -8,8 +8,8 @@ ru:
       update:
         success: Ваш профиль успешно обновлен
         error: Возникли ошибки
-    pages:
-      feedback:
+    feedbacks:
+      create:
         success: Ваше сообщение успешно отправлено
         error: Возникли ошибки
     line_items:
