feature Make order in one click

--- a/config/locales/ru/ru.yml
+++ b/config/locales/ru/ru.yml
@@ -140,6 +140,8 @@ ru:
   not_available: Нет в наличии
   notificatins_mail: Уведомления на почту
   order_delivery: Способ доставки
+  order_in_one_click: Заказ в 1 клик!
+  order_in_one_click_user_message: Оставьте ваш телефон. Мы вам позвоним для оформления заказа
   order_line_items: Продукция
   order_number: Номер
   order_state: Статус
