add meta_tags gem; create locales for meta tags
add SeoField concern for concerns

create SeoSeeting model as storage for meta tags for controllers actions; [ci skip]

fix production.yml [ci skip]

fix cucumber; fix active_admin; remove deprecated code

fix

fix specs

fix specs; add ActiveAdmin custom formtastic field for display messages

add custom input in ActiveAdmin config file

move message_input to ActiveAdmin namespace

--- a/config/locales/ru/active_record.ru.yml
+++ b/config/locales/ru/active_record.ru.yml
@@ -6,6 +6,11 @@ ru:
         few: Настройки
         many: Настройки
         other: Настройки
+      seo_setting:
+        one: Метаданные
+        few: Метаданные
+        many: Метаданные
+        other: Метаданные
       user:
         one: Пользователь
         few: Пользователи
@@ -200,6 +205,11 @@ ru:
         <<: *main
         full_text: Полное описание
         post_category: Категория постов
+      seo_setting:
+        <<: *meta
+        url: Путь URL (например '/brands' или '/producs/121')
+        action_name: Название метода
+        controller_name: Название контроллера
       page:
         <<: *main
         full_text: Полное описание
