--- a/config/locales/ru/activeadmin.ru.yml
+++ b/config/locales/ru/activeadmin.ru.yml
@@ -23,6 +23,13 @@ ru:
     has_many_new: "Добавить %{model}"
     has_many_delete: "Удалить"
     has_many_remove: "Убрать"
+    messages:
+      seo_title_message: > 
+        Для создания Seo настройки, вам необходимо заполнить
+        ИЛИ поле URL, или два поля: <название контроллера> и 
+        <название метода>. Если вы заполните поле <путь URL> 
+        то название контроллера и метода заполнять не нужно, 
+        они автоматически будут сгенерированы при создании/обновлении настройки.
     filters:
       buttons:
         filter: "Фильтровать"
@@ -140,6 +147,7 @@ ru:
       admin: Админка
       cities: Города
       orders: Заказы
+      settings: Настройки
     controller:
       actions:
         update: Запись успешно обновлена
