--- a/config/locales/ru/ru.yml
+++ b/config/locales/ru/ru.yml
@@ -128,6 +128,7 @@ ru:
   goods_supplied: Товары в комплект
   guarantee: Гарантия
   i_like: Мне нравится
+  in_stock: На складе
   in_total: Итого
   inconsistency_of_data: Несоответствие данных
   information_about_your_order: Информация о заказе на Вашей почте
