fix bug with reviews for anonymous users

--- a/config/locales/ru/ru.yml
+++ b/config/locales/ru/ru.yml
@@ -78,6 +78,7 @@ ru:
   alien_cart: Это не ваша корзина
   all_brands: Все бренды
   all_products: Все товары
+  anonymous_user: Анонимный пользователь
   are_you_sure: Вы уверены?
   ask_a_question: Задать вопрос
   authentication: Авторизация
