add yandex banner, posts order desc

--- a/config/locales/ru/ru.yml
+++ b/config/locales/ru/ru.yml
@@ -202,6 +202,7 @@ ru:
   waiting_for_call: Жду звонка
   what_are_you_looking_for: Что вы ищете?
   who_we_are: Кто мы
+  yandex_banner_alt_message: Оцените качество магазина на Яндекс.Маркете.
   you_might_also_like: Вам может понравиться
   you_should_be_logged_in: Вы должны быть авторизованы
   you_watched: Вы смотрели
