fix small bugs [ci skip]

--- a/config/locales/ru/ru.yml
+++ b/config/locales/ru/ru.yml
@@ -123,7 +123,7 @@ ru:
     call_me: Перезвоните мне
   feedback_user_name: Как к Вам обращаться
   find: Найти
-  get_subscribes: 'Получить рассылку на новинки и т.д.'
+  get_subscribes: Получать рассылку о новинках и распродажах
   go_to_main: На главную
   go_to_the_personal_area: В личный кабинет
   go_to_wishlist: 'В список "Мне нравится"'
